--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,12 @@ footer i {
     color: rgba(0, 0, 0, 0.815);
 }
 
+.whatswpp{
+    font-size: 1em;
+    margin-left: 1.8em;
+    color: rgba(0, 0, 0, 0.815);
+}
+
 .tucano-footer {
     position: absolute;
     width: 25%;
